# mcplibrarian

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  dev-kid.yml  execution_plan.json  health-check.sh  list-wrapped.sh  mcp-librarian.py  publish-to-github.sh  pyproject.toml  tasks.md  unwrap-mcp.sh  wrap-mcp.sh
.devkid/: config.json
.github/: FUNDING.yml
docker-configs/deeplake-rag/: Dockerfile  README.md  docker-compose.yml
docker-configs/tableau-mcp-server/: Dockerfile  README.md  docker-compose.yml
docs/: MANUAL_DOCKERIZATION_GUIDE.md  MCP_DOCKERIZE_GUIDE.md  PLAYWRIGHT_TUTORIAL.md
examples/: README.md
examples/playwright/: Dockerfile  README.md  docker-compose.yml  index.js  package-lock.json  package.json  routing_rules.py
memory-bank/: CLAUDE.md  README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/private/gyasis/: activeContext.md
memory-bank/shared/: .constitution.md
prd/: MCP_LIBRARIAN_AUTOMATION_PRD.md
scripts/: mcp-proxy.py  mcp_container_manager.py
specs/001-mcp-librarian/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-librarian/checklists/: requirements.md
specs/001-mcp-librarian/contracts/: cli-commands.md
src/mcp_dockerize/: __init__.py  cli.py
src/mcp_dockerize/builders/: __init__.py  docker_builder.py
src/mcp_dockerize/detectors/: __init__.py  base.py  node.py  python.py
src/mcp_dockerize/generators/: __init__.py  compose.py  dockerfile.py
src/mcp_dockerize/health/: checker.py  states.py
src/mcp_dockerize/registry/: models.py  store.py
src/mcp_dockerize/smart_scan/: fixer.py  issues.py  scanner.py
src/mcp_dockerize/templates/: docker-compose.yml.j2  env-example.j2  node-npm-selfcontained.Dockerfile.j2  node-npm.Dockerfile.j2  python-direct.Dockerfile.j2  python-uv.Dockerfile.j2
src/mcp_dockerize/testers/: __init__.py  mcp_tester.py
test-docker-configs/mcplibrarian/: Dockerfile  README.md  docker-compose.yml
tests/fixtures/sample-node-server/: index.js  package.json
tests/fixtures/sample-python-server/: pyproject.toml  server.py
